# gcp-marketing-ai

./: .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  README.md  USAGE_GUIDE.md  cloudbuild.yaml  marketing-ai.code-workspace  migration_plan.md  recommended_structure.md  requirements.txt  requirements_fixed.txt  test_api.py  test_functionality.py  test_server.py  test_simple.py  test_system.py
analytics/: __init__.py
analytics/engines/: __init__.py  basic_analyzer.py
api/: __init__.py  main.py
api/endpoints/: __init__.py  analytics.py  competitors.py  reports.py
api/routes/: collections.py
config/: analysis_results_schema.json  bigquery_schemas.json  competitor_data_schema.json  config.py
dashboard/: streamlit_app.py
data-pipelines/collectors/social-media/instagram/: collector.py
data-pipelines/collectors/web-crawler/: web_scraper.py
data_pipelines/schemas/: pubsub_schemas.py
infra/: main.tf  terraform.tfvars.example
ml/: pyproject.toml
ml/training/: pipeline.py
shared/: __init__.py
shared/utils/: __init__.py  bigquery_client.py
src/: main.py
src/analysis/: basic_analyzer.py
src/data_collection/: web_scraper.py
src/utils/: bigquery_client.py
tests/: __init__.py
tests/unit/: __init__.py  test_basic_analyzer.py  test_basic_analyzer_comprehensive.py  test_bigquery_client_comprehensive.py  test_pubsub_schemas.py  test_web_scraper.py  test_web_scraper_comprehensive.py
